[gd_scene load_steps=6 format=3 uid="uid://ckt7ikqnp27io"]

[ext_resource type="Script" path="res://scripts/Menues/main_menu.gd" id="1_qltth"]
[ext_resource type="Theme" uid="uid://cleu1u4axevxc" path="res://assests/lable_theme.tres" id="2_movqs"]
[ext_resource type="Texture2D" uid="uid://el6v3klk5hqa" path="res://assests/oils_well_main_menu.png" id="3_2j2xq"]
[ext_resource type="Texture2D" uid="uid://c0x1ujwaucnq7" path="res://assests/img/Press_Fire_to_Play.png" id="3_abt1v"]
[ext_resource type="Texture2D" uid="uid://ef6ujaln78b2" path="res://assests/img/Sierra_online.png" id="5_r4yxx"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.996215, 1.0082)
script = ExtResource("1_qltth")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 10.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="OilsWell" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(402.486, 121.513)
scale = Vector2(2.29406, 2.19767)
texture = ExtResource("3_2j2xq")

[node name="PressFireToPlay" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(386.463, 289.625)
scale = Vector2(2.58554, 2.19766)
texture = ExtResource("3_abt1v")

[node name="HighScoreText" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 48.0
offset_top = 381.0
offset_right = 433.0
offset_bottom = 428.0
theme = ExtResource("2_movqs")
theme_override_colors/font_color = Color(0.760784, 0.298039, 0.690196, 1)
theme_override_font_sizes/font_size = 40
text = "HIGH SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreAmount" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 450.0
offset_top = 381.0
offset_right = 691.0
offset_bottom = 428.0
theme = ExtResource("2_movqs")
theme_override_colors/font_color = Color(0.760784, 0.298039, 0.690196, 1)
theme_override_font_sizes/font_size = 40
text = "24000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SierraOnline" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(401.52, 333.267)
scale = Vector2(2.30401, 2.16533)
texture = ExtResource("5_r4yxx")

[node name="SolveLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 209.0
offset_top = 444.0
offset_right = 643.0
offset_bottom = 467.0
theme = ExtResource("2_movqs")
theme_override_colors/font_color = Color(0.760784, 0.298039, 0.690196, 1)
text = "KLONET AV SØLVE OTTO LANDMARK ØREN"
